test: add local data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=qq3932
 # JPA configurations
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
+
+
+paypal.client.id=AbMhFknsfOs0g9G2M_O3m5rBUg6S6N8dPEr1VKd_67IcClodTW8sT6Htbvnsk1Rm24QNg4T-xSA5JDcE
+paypal.client.secret=ECVHspn5ZrJ-ZldkkgI3ym0x52JZBsO_hEy9vhX3wB6KhS0Pg0rSBu06D9eunmGqhsYYbhzTL7JDW23R
+paypal.mode=sandbox
